[package]
name = "core-futures-tls"
version = "0.1.2"
authors = ["roblabla <unfiltered@roblab.la>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/SunriseOS/core-futures-tls"
description = "A libcore wrapper allowing async/await to be used from no_std crates"
readme = "README.md"
keywords = ["async", "await", "nostd"]
categories = ["asynchronous", "no-std"]
license = "Apache-2.0 OR MIT"

[features]
unsafe-single-thread = []